--- a/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
+++ b/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
@@ -47,13 +47,6 @@ set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name FLOW_ENABLE_IO_ASSIGNMENT_ANALYSIS ON
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY out
-set_global_assignment -name VERILOG_FILE ../../rtl/top/mandelbrot_fpga_de10_nano.v
-set_global_assignment -name SDC_FILE mandelbrot_fpga_de10_nano.SDC
-set_global_assignment -name QIP_FILE ../../rtl/clock/sys_pll.qip
-set_global_assignment -name SIP_FILE ../../rtl/clock/sys_pll.sip
-set_global_assignment -name VERILOG_FILE ../../rtl/reset/reset.v
-set_global_assignment -name VERILOG_FILE ../../rtl/blinky/blinky.v
-set_global_assignment -name CDF_FILE mandelbrot_fpga_de10_nano.cdf
 
 # Pin & Location Assignments
 # ==========================
@@ -242,6 +235,15 @@ set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
 
 # end ENTITY(sys_pll_0002)
 # ------------------------
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+
+set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/video/video_sync_gen.sv
+set_global_assignment -name VERILOG_FILE ../../rtl/blinky/blinky.v
+set_global_assignment -name VERILOG_FILE ../../rtl/reset/reset.v
+set_global_assignment -name VERILOG_FILE ../../rtl/top/mandelbrot_fpga_de10_nano_top.v
 set_global_assignment -name QIP_FILE ../../rtl/clock/vga_pll.qip
 set_global_assignment -name SIP_FILE ../../rtl/clock/vga_pll.sip
+set_global_assignment -name QIP_FILE ../../rtl/clock/sys_pll.qip
+set_global_assignment -name SIP_FILE ../../rtl/clock/sys_pll.sip
+set_global_assignment -name CDF_FILE mandelbrot_fpga_de10_nano.cdf
+set_global_assignment -name SDC_FILE mandelbrot_fpga_de10_nano.SDC
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
