--- a/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
+++ b/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
@@ -237,8 +237,12 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 # ------------------------
 
 
+set_global_assignment -name VERILOG_FILE ../../rtl/mandelbrot/mandelbrot_coords.v
+set_global_assignment -name VERILOG_FILE ../../rtl/mandelbrot/mandelbrot_calc.v
+set_global_assignment -name VERILOG_FILE ../../rtl/fifo/sync_fifo.v
 set_global_assignment -name VERILOG_FILE ../../rtl/memory/rom_generic_sp.v
 set_global_assignment -name VERILOG_FILE ../../rtl/memory/ram_generic_tp.v
+set_global_assignment -name VERILOG_FILE ../../rtl/video/video_text_console.v
 set_global_assignment -name VERILOG_FILE ../../rtl/video/video_sync_gen.v
 set_global_assignment -name VERILOG_FILE ../../rtl/video/video_pipe_sync_top.v
 set_global_assignment -name SYSTEMVERILOG_FILE ../../rtl/top/mandelbrot_fpga_top.sv
@@ -255,4 +259,7 @@ set_global_assignment -name QIP_FILE ../../rtl/clock/sys_pll.qip
 set_global_assignment -name SIP_FILE ../../rtl/clock/sys_pll.sip
 set_global_assignment -name CDF_FILE mandelbrot_fpga_de10_nano.cdf
 set_global_assignment -name SDC_FILE mandelbrot_fpga_de10_nano.SDC
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
+set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
