--- a/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
+++ b/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
@@ -141,8 +141,8 @@ set_global_assignment -name PHYSICAL_SYNTHESIS_EFFORT EXTRA
 
 # Power Estimation Assignments
 # ============================
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH 100 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "15 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL TYPICAL
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
 
 # ---------------------------------------
@@ -239,10 +239,11 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
+set_global_assignment -name VERILOG_FILE ../../rtl/fifo/async_fifo.v
+set_global_assignment -name VERILOG_FILE ../../rtl/fifo/sync_fifo.v
 set_global_assignment -name VERILOG_FILE ../../rtl/mandelbrot/mandelbrot_coords.v
 set_global_assignment -name VERILOG_FILE ../../rtl/mandelbrot/mandelbrot_calc.v
 set_global_assignment -name VERILOG_FILE ../../rtl/mandelbrot/mandelbrot_top.v
-set_global_assignment -name VERILOG_FILE ../../rtl/fifo/sync_fifo.v
 set_global_assignment -name VERILOG_FILE ../../rtl/memory/rom_generic_sp.v
 set_global_assignment -name VERILOG_FILE ../../rtl/memory/ram_generic_tp.v
 set_global_assignment -name VERILOG_FILE ../../rtl/video/video_text_console.v
@@ -263,4 +264,12 @@ set_global_assignment -name SIP_FILE ../../rtl/clock/sys_pll.sip
 set_global_assignment -name CDF_FILE mandelbrot_fpga_de10_nano.cdf
 set_global_assignment -name SDC_FILE mandelbrot_fpga_de10_nano.SDC
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[3]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[2]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "reset:sys_reset|rst_out_sync_0[0]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[1]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "mandelbrot_fpga_top:mandelbrot_fpga_top|async_fifo:mandelbrot_fifo|out_wcnt1[*]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "mandelbrot_fpga_top:mandelbrot_fpga_top|async_fifo:mandelbrot_fifo|in_rcnt1[*]"
+set_global_assignment -name QII_AUTO_PACKED_REGISTERS "SPARSE AUTO"
+set_global_assignment -name ALM_REGISTER_PACKING_EFFORT LOW
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
