--- a/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
+++ b/fpga/de10_nano/mandelbrot_fpga_de10_nano.qsf
@@ -239,6 +239,79 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[3]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[2]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "reset:sys_reset|rst_out_sync_0[0]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[1]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "mandelbrot_fpga_top:mandelbrot_fpga_top|async_fifo:mandelbrot_fifo|out_wcnt1[*]"
+set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "mandelbrot_fpga_top:mandelbrot_fpga_top|async_fifo:mandelbrot_fifo|in_rcnt1[*]"
+set_global_assignment -name QII_AUTO_PACKED_REGISTERS "SPARSE AUTO"
+set_global_assignment -name ALM_REGISTER_PACKING_EFFORT LOW
+set_global_assignment -name VERILOG_FILE ../../rtl/qmem/qmem_decoder.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/timescale.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_xcv_ram32x8d.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_wbmux.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_wb_biu.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_tt.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_tpram_32x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_top_wrapper.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_sprs.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_2048x32_bw.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_2048x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_2048x8.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_1024x32_bw.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_1024x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_1024x8.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_512x20.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_256x21.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_128x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_64x24.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_64x22.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_64x14.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_spram_32x24.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_sb_fifo.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_sb.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_rfram_generic.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_rf.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_reg2mem.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_qmem_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_pm.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_pic.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_operandmuxes.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_mult_mac.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_mem2reg.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_lsu.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_iwb_biu.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_immu_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_immu_tlb.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_if.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_ic_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_ic_tag.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_ic_ram.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_ic_fsm.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_gmultp2_32x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_genpc.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_freeze.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_except.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_du.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dpram_32x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dmmu_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dmmu_tlb.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_defines.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dc_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dc_tag.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dc_ram.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_dc_fsm.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_ctrl.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_cpu.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_cfgr.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_amultp2_32x32.v
+set_global_assignment -name VERILOG_FILE ../../rtl/or1200/or1200_alu.v
+set_global_assignment -name VERILOG_FILE ../../rtl/memory/ram_generic_dp_bs.v
+set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_regs.v
+set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_bus.v
+set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_top.v
 set_global_assignment -name VERILOG_FILE ../../rtl/fifo/async_fifo.v
 set_global_assignment -name VERILOG_FILE ../../rtl/fifo/sync_fifo.v
 set_global_assignment -name VERILOG_FILE ../../rtl/mandelbrot/mandelbrot_coords.v
@@ -256,20 +329,13 @@ set_global_assignment -name VERILOG_FILE ../../rtl/i2c/I2C_Controller.v
 set_global_assignment -name VERILOG_FILE ../../rtl/audio/AUDIO_IF.v
 set_global_assignment -name VERILOG_FILE ../../rtl/blinky/blinky.v
 set_global_assignment -name VERILOG_FILE ../../rtl/reset/reset.v
-set_global_assignment -name VERILOG_FILE ../../rtl/top/mandelbrot_fpga_de10_nano_top.v
 set_global_assignment -name QIP_FILE ../../rtl/clock/vga_pll.qip
 set_global_assignment -name SIP_FILE ../../rtl/clock/vga_pll.sip
 set_global_assignment -name QIP_FILE ../../rtl/clock/sys_pll.qip
 set_global_assignment -name SIP_FILE ../../rtl/clock/sys_pll.sip
+set_global_assignment -name VERILOG_FILE ../../rtl/top/mandelbrot_fpga_de10_nano_top.v
 set_global_assignment -name CDF_FILE mandelbrot_fpga_de10_nano.cdf
 set_global_assignment -name SDC_FILE mandelbrot_fpga_de10_nano.SDC
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
-set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[3]"
-set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[2]"
-set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "reset:sys_reset|rst_out_sync_0[0]"
-set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED -to "reset:sys_reset|rst_out_sync_0[1]"
-set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "mandelbrot_fpga_top:mandelbrot_fpga_top|async_fifo:mandelbrot_fifo|out_wcnt1[*]"
-set_instance_assignment -name SYNCHRONIZER_IDENTIFICATION FORCED_IF_ASYNCHRONOUS -to "mandelbrot_fpga_top:mandelbrot_fpga_top|async_fifo:mandelbrot_fifo|in_rcnt1[*]"
-set_global_assignment -name QII_AUTO_PACKED_REGISTERS "SPARSE AUTO"
-set_global_assignment -name ALM_REGISTER_PACKING_EFFORT LOW
+set_global_assignment -name QIP_FILE ../../rtl/cyclonev_memory/cyclonev_ram_2kx32_dp_bs.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
